posiGen_FullsendBox/src/objects/Part__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Default_Quantity__c</fullName>
        <label>Default Quantity</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>System_Config__c</fullName>
        <label>System Config</label>
        <picklist>
            <picklistValues>
                <fullName>LA 4.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LA 6.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NYCT 4.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NYCT 6.0</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>part_code__c</fullName>
        <label>Part Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Part</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>part_code__c</columns>
        <columns>Default_Quantity__c</columns>
        <columns>System_Config__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Part Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Parts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>